# switchboard-sdk

./: LICENSE  README.md  copy.bara.sky
.github/workflows/: copybara.yaml
aptos/: README.md
aptos/aptos_v2/scripts/: README.md  package.json  tsconfig.base.json
aptos/aptos_v2/scripts/src/: anneal.ts  cake.ts  create_cake_feed.ts  create_usdt_feed.ts  decrease_feed_cost.ts  extend_and_push_feeds_to_crank.ts  extend_queue_timeout.ts  fix_usdc_feed.ts  get_amount_spent.ts  get_oracle_balance.ts  job_test.ts  jobs.ts  speed_up_feeds.ts  turn_down_feed_costs.ts  usdt.ts
aptos/aptos_v2/switchboard/: Move.toml
aptos/aptos_v2/switchboard/sources/errors/: errors.move
aptos/aptos_v2/switchboard/sources/events/: events.move
aptos/aptos_v2/switchboard/sources/schemas/: aggregator.move  crank.move  escrow.move  job.move  oracle.move  oracle_queue.move  permission.move  switchboard.move
aptos/aptos_v2/switchboard/sources/utils/: math.move  serialization.move
aptos/examples/example_basic_read/: Move.toml  README.md  package.json
aptos/examples/example_basic_read/scripts/sh/: deploy.sh
aptos/examples/example_basic_read/scripts/ts/: run.ts
aptos/examples/example_basic_read/sources/: example_basic_read.move
aptos/on_demand/: Move.toml  README.md  package.json  tsconfig.json
aptos/on_demand/scripts/sh/: deploy.sh  devnet_get_abis.sh  upgrade.sh
aptos/on_demand/scripts/ts/: devnet_aggregator_flow.ts  devnet_axios_client.ts  devnet_guardian_queue_override.ts  devnet_initialize.ts  devnet_oracle_queue_override.ts  devnet_superagent_client.ts  mainnet_aggregator_flow.ts  mainnet_guardian_queue_override.ts  mainnet_initialize.ts  mainnet_oracle_queue_override.ts  porto_aggregator_flow.ts  porto_guardian_queue_override.ts  porto_initialize.ts  porto_oracle_queue_override.ts  testnet_aggregator_flow.ts  testnet_guardian_queue_override.ts  testnet_initialize.ts  testnet_oracle_queue_override.ts
aptos/on_demand/sources/actions/aggregator/: aggregator_init_action.move  aggregator_set_authority_action.move  aggregator_set_configs_action.move  aggregator_submit_result_action.move
aptos/on_demand/sources/actions/oracle/: oracle_attest_action.move  oracle_init_action.move
aptos/on_demand/sources/actions/queue/: guardian_queue_init_action.move  oracle_queue_init_action.move  queue_add_fee_coin_action.move  queue_override_oracle_action.move  queue_remove_fee_coin_action.move  queue_set_authority_action.move  queue_set_configs_action.move
aptos/on_demand/sources/actions/update/: update_action.move
aptos/on_demand/sources/errors/: errors.move
aptos/on_demand/sources/schemas/: aggregator.move  oracle.move  queue.move
aptos/on_demand/sources/utils/: decimal.move  hash.move  serialization.move
javascript/on-demand/: package.json
javascript/on-demand/src/accounts/: oracle.ts
javascript/on-demand/src/utils/: index.ts
rust/switchboard-on-demand/: .env
rust/switchboard-on-demand-client/: Cargo.toml  README.md
rust/switchboard-on-demand-client/src/accounts/: pull_feed.rs
rust/switchboard-on-demand/patches/ahash-0.8.4-stdsimd.patch/: Cargo.toml
rust/switchboard-on-demand/src/: clock.rs
rust/switchboard-on-demand/src/client/: event_client.rs  transaction_builder.rs  utils.rs
rust/switchboard-on-demand/src/on_demand/accounts/: mod.rs  oracle.rs  oracle_stats.rs  pull_feed.rs  queue.rs
rust/switchboard-on-demand/src/on_demand/instructions/: permission_set.rs  queue_garbage_collect.rs  randomness_commit.rs
sail/sail-sdk/: Cargo.toml  README.md  package.json
sail/sail-sdk/lib/: index.d.ts  index.js
sail/sail-sdk/native/: Cargo.toml
sail/sail-sdk/native/src/: lib.rs
sail/sail-sdk/src/: lib.rs
sail/sail-sdk/src/amd_sev_snp_attestation/: attest.rs  mod.rs  verify.rs
sail/sail-sdk/src/keys/: mod.rs
sail/sail-sdk/src/randomness/: mod.rs  read_rand.rs
solana/javascript/on-demand/: README.md  package.json  tsconfig.json
solana/javascript/on-demand/src/: constants.ts  index.ts
solana/javascript/on-demand/src/accounts/: index.ts  lutMap.ts  oracle.ts  permission.ts  pullFeed.ts  queue.ts  randomness.ts  state.ts
solana/javascript/on-demand/src/anchor-utils/: AnchorUtils.ts  index.ts
solana/javascript/on-demand/src/event-utils/: index.ts
solana/javascript/on-demand/src/evm/: index.ts  message.ts
solana/javascript/on-demand/src/instruction-utils/: InstructionUtils.ts  Secp256k1InstructionUtils.ts  index.ts
solana/javascript/on-demand/src/oracle-interfaces/: gateway.ts
solana/javascript/on-demand/src/sysvars/: associatedToken.ts  index.ts  recentSlothashes.ts
solana/javascript/on-demand/src/utils/: cache.ts  fs.ts  index.ts  lookupTable.ts
solana/rust/switchboard-on-demand/: Cargo.toml  package.json
solana/rust/switchboard-on-demand-client/: Cargo.toml  README.md
solana/rust/switchboard-on-demand-client/src/: crossbar.rs  gateway.rs  lib.rs  lut.rs  lut_owner.rs  oracle_job.rs  oracle_job.serde.rs  pull_feed.rs  recent_slothashes.rs  secp256k1.rs
solana/rust/switchboard-on-demand/patches/ahash-0.8.4-stdsimd.patch/src/: operations.rs
solana/rust/switchboard-on-demand/patches/ahash-0.8.5-stdsimd.patch/: Cargo.toml
solana/rust/switchboard-on-demand/patches/ahash-0.8.5-stdsimd.patch/src/: lib.rs
solana/rust/switchboard-on-demand/src/: anchor_traits.rs  decimal.rs  lib.rs  macros.rs  prelude.rs  program_id.rs  types.rs  utils.rs
solana/rust/switchboard-on-demand/src/client/: mod.rs  transaction_builder.rs  utils.rs
solana/rust/switchboard-on-demand/src/on_demand/: error.rs  mod.rs  types.rs
solana/rust/switchboard-on-demand/src/on_demand/accounts/: mod.rs  oracle.rs  oracle_stats.rs  pull_feed.rs  queue.rs  randomness.rs  state.rs
solana/rust/switchboard-on-demand/src/on_demand/instructions/: guardian_quote_verify.rs  mod.rs  oracle_heartbeat.rs  oracle_heartbeat_v2.rs  oracle_reset_lut.rs  oracle_set_configs.rs  oracle_sync_lut.rs  permission_set.rs  queue_garbage_collect.rs  queue_pay_subsidy.rs  randomness_commit.rs
solana/rust/switchboard-on-demand/src/sysvar/: address_lookup_table.rs  mod.rs
(+34 files in other folders)
