[package]
name = "sail-sdk"
version = "0.1.4"
edition = "2021"
authors = ["Mitch Gildenberg <mitch@switchboard.xyz>"]
description = "Switchboard SAIL SDK for TEE abstracted dockerized runtimes"
license = "MIT"

# [lib]
# crate-type = ["cdylib"]

[dependencies]
sev = { version = "=4.0.0", features = ["snp"] }
reqwest = { version = "^0.12.4", features = ["json", "native-tls", "blocking"] }
anyhow = { version = "^1.0.82", features = ["backtrace"] }
rand = "^0.8.5"
bincode = "1.3.3"
sev-snp-utilities = { version = "1.5.1"}
hex = "0.4.3"
serde_json = "1.0.135"
sha2 = "0.10.8"
libsecp256k1 = "0.7.1"
log = "0.4"
solana-sdk = "^1.18,<2"
rand_chacha = "0.3.1"
neon = "1.0.0"
cached = { version = "0.47.0", features = ["async", "futures", "async-trait"] }

[features]
default-panic-hook = []
