[package]
name = "sail-sdk-js"
version = "0.1.0"
authors = ["Mitch Gildenberg <mitch@switchboard.xyz>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "sail_sdk_js"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.10.1"

[dependencies]
neon = "0.10.1"
sail-sdk = { path = "../../sail-sdk" }
bincode = "1.3.3"
tokio = "1.42.0"
hex = "0.4.3"

[features]
default-panic-hook = []

[workspace]
